--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 .block {
-    padding: 15px;
+    padding: 25px;
 }
 
 .left {
@@ -18,4 +18,8 @@
 
 .right {
     float: right;
+}
+
+.big-left {
+    padding-left: 25px;
 }
